<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="project.com.instahelp.activities.AddPost"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_add_post"
    android:weightSum="1">

    <!-- Title -->
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_border_color_black_48dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            />
        <EditText
            android:id="@+id/post_title"
            android:hint="@string/add_post_title_hint"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <EditText
        android:id="@+id/post_content"
        android:hint="@string/add_post_content_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="150"
        android:maxLines="5"
        android:lines="3"
        android:layout_marginTop="50dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <Button
            android:id="@+id/add_post_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/add_post_date"
            android:gravity="center"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:onClick="showDatePicker"
            android:layout_weight="1"
            />


        <Button
            android:id="@+id/add_post_time"
            android:text="@string/add_post_time"
            android:gravity="center"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@android:style/Widget.DeviceDefault.Light.Spinner"
            android:onClick="showTimePicker"
            android:layout_weight="1"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <CheckBox
            android:id="@+id/addPost_phone_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_my_phone_number"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <CheckBox
            android:id="@+id/addPost_location_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_my_location"/>

    </LinearLayout>


    <Button
        android:id="@+id/add_post_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/add_new_post"

        />




</LinearLayout>