<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="project.com.instahelp.activities.ViewPostAsOwnerActivity"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    android:adjustViewBounds="true"
    android:divider="?android:dividerHorizontal"
    android:showDividers="middle"
    >


    <!-- invisible fields -->

    <TextView
        android:id="@+id/view_post_as_owner_user_id"
        style="@style/InvisibleTextView"/>

    <TextView
        android:id="@+id/view_post_as_owner_post_id"
        style="@style/InvisibleTextView"/>


    <!-- Title -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_title"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/view_post_as_owner_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/grey"
            />

    </LinearLayout>


    <!-- post content -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"

        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/post_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/view_post_as_owner_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/grey"
            />

    </LinearLayout>

    <!-- Date -->
    <LinearLayout
        android:id="@+id/date_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginEnd="7dp"
            android:layout_marginRight="7dp"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/grey"/>
        </LinearLayout>


        <!-- Time -->
        <LinearLayout
            android:id="@+id/time_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="7dp"
                android:layout_marginRight="7dp"
                android:text="@string/time"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/grey"
                />
        
        
    </LinearLayout>

    <TextView
        android:id="@+id/view_post_as_owner_helpOffers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="false"
        android:onClick="showHelpOffers"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <!-- Chosen user -->

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/chosen_user_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/post_you_chose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/chosen_user"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp"
            android:textColor="@color/grey"
            />

    </LinearLayout>



    <!-- buttons -->
    <Button
        android:layout_marginTop="64dp"
        android:id="@+id/mark_done_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:enabled="true"
        android:onClick="markDonePressed"
        android:text="@string/view_post_mark_done"
        android:layout_gravity="center_horizontal"
        />

    <Button
        android:id="@+id/delete_button"
        android:text="@string/view_post_delete"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deletePostClicked"
        android:background="@color/red"
        android:layout_gravity="center_horizontal" />

</LinearLayout>
